# ltp

src/: CMakeLists.txt  config.h
src/framework/: base_model.h  decoder.h  featurespace.h  model.h  multi_model.h  parameter.h
src/ner/: CMakeLists.txt  decoder.cpp  decoder.h  extractor.cpp  extractor.h  model.cpp  model.h  multi_model.cpp  multi_model.h  multi_ner.cpp  multi_ner.h  ner.cpp  ner.h  ner_dll.cpp  ner_frontend.cpp  otner.cpp
src/postagger/: CMakeLists.txt  extractor.cpp  extractor.h  model.cpp  model.h  otpos.cpp  postag_dll.cpp  postagger.cpp  postagger.h  postagger_frontend.cpp  postagger_frontend.h
src/segmentor/: customized_segmentor_frontend.cpp  decoder.cpp  decoder.h  extractor.cpp  extractor.h  model.cpp  model.h  preprocessor.cpp  segment_dll.cpp  segmentor.cpp  segmentor.h  segmentor_frontend.cpp  settings.h
src/tools/: CMakeLists.txt  model_tool.cpp  model_tool.h
src/utils/: model_helper.hpp  new_template.hpp  smartmap.hpp
src/utils/math/: featurevec.h
